--- a/src/styles/theme/fonts.scss
+++ b/src/styles/theme/fonts.scss
@@ -2,8 +2,8 @@ $fw-regular: 400;
 $fw-black: 900;
 $fw-bold: 700;
 
-$font-Roboto:
-  Roboto,
+$font-Inter:
+  Inter,
   -apple-system,
   BlinkMacSystemFont,
   Segoe UI,
