--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   margin: 0;
   & * {
-    font-family: $font-Roboto;
+    font-family: $font-Inter;
     font-size: 40px;
   }
 }
