added dnt viewer, dnt columns, main page

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,2 +1,14 @@
 $color-black: #000;
 $color-white: #fff;
+
+$color-success: #17c964;
+$color-error: #f31260;
+
+$color-grey-font: #ecedee;
+
+$color-grey-divider: #ffffff26;
+
+$color-is-active: #0070f3;
+$color-input-border: #e4e4e7;
+$color-input-placeholder: #71717a;
+$color-grey-background: #18181b;
