--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,7 +16,6 @@ body {
   margin: 0;
   & * {
     font-family: $font-Inter;
-    font-size: 40px;
   }
 }
 
@@ -36,14 +35,6 @@ p {
   margin-bottom: 0;
 }
 
-input {
-  border: none;
-  &:focus-visible,
-  &:focus {
-    outline: none;
-  }
-}
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -51,7 +42,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
+input:focus {
+  border: none;
 }
