--- a/src/pages/Bgm/Bgm.module.scss
+++ b/src/pages/Bgm/Bgm.module.scss
@@ -1,7 +1,7 @@
 @use "styles" as *;
 
 .bgmCnt {
-  padding-top: 40px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,12 +33,29 @@
 .musicSectionCnt {
   padding: 20px 40px;
   border-radius: 24px;
-  width: 1400px;
+  width: 900px;
   min-height: 650px;
   background-color: $color-grey-background;
-  height: fit-content;
+  padding-bottom: 20px;
 }
 
 .filterCnt {
   display: flex;
+  width: 100%;
+  justify-content: center;
 }
+
+.error {
+  display: flex;
+  padding-top: 25%;
+  justify-content: center;
+}
+
+.paginationCnt {
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
