--- a/src/components/AudioPlayer/AudioPlayer.module.scss
+++ b/src/components/AudioPlayer/AudioPlayer.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: $color-white;
+  background-color: #f4f4f5;
   border-radius: 8px 8px 0 0;
   height: 60px;
   bottom: 0;
