--- a/src/components/Sound/Sound.module.scss
+++ b/src/components/Sound/Sound.module.scss
@@ -4,12 +4,12 @@
   transition: transform 0.5s ease;
   display: flex;
   gap: 10px;
-  width: fit-content;
   align-items: center;
+  width: 100%;
 }
 
 .slider {
-  width: 600px;
+  width: 100%;
 }
 
 .iconStateCnt {
@@ -18,15 +18,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
+  min-width: 32px;
+  min-height: 32px;
   background-color: $color-white;
   border-radius: 16px;
   cursor: pointer;
 }
 
 .sliderDurationCnt {
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding-top: 20px;
@@ -47,4 +47,16 @@
 .isCurrent {
   transform: scale(1.05);
   transition: transform 0.5s ease;
+}
+
+@media screen and (max-width: 500px) {
+  .name {
+    font-size: 10px;
+  }
+  .slider {
+    max-width: 100%;
+  }
+  .sliderDurationCnt {
+    overflow: hidden;
+  }
 }
