--- a/src/ui/skeletons/InputSkeleton/InputSkeleton.module.scss
+++ b/src/ui/skeletons/InputSkeleton/InputSkeleton.module.scss
@@ -1,11 +1,12 @@
 @use "styles" as *;
 
 .inputSkeletonCnt {
+  width: 100%;
   position: relative;
 }
 
 .input {
-  width: 360px;
+  width: 97%;
   height: 32px;
   border-radius: 8px;
 }
