--- a/src/ui/skeletons/SoundSkeleton/SoundSkeleton.module.scss
+++ b/src/ui/skeletons/SoundSkeleton/SoundSkeleton.module.scss
@@ -1,9 +1,9 @@
 @use "styles" as *;
 
 .audioSkeleton {
+  width: 100%;
   display: flex;
   gap: 10px;
-  width: fit-content;
   align-items: center;
 }
 
@@ -21,14 +21,14 @@
 .sliderCnt {
   height: 6px;
   border-radius: 6px;
-  width: 600px;
+  width: 100%;
 }
 
 .rightCnt {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 100%;
 }
 
 .timeCnt {
