--- a/src/components/SoundList/SoundList.module.scss
+++ b/src/components/SoundList/SoundList.module.scss
@@ -12,3 +12,12 @@
   height: 200px;
   width: 200px;
 }
+
+@media screen and (max-width: 480px) {
+  .errorCnt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20%;
+  }
+}
