--- a/src/components/Layout/Header/LinksRow/LinksRow.module.scss
+++ b/src/components/Layout/Header/LinksRow/LinksRow.module.scss
@@ -1,6 +1,13 @@
 @use "styles" as *;
 
 .linksRowCnt {
+  width: 100%;
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 480px) {
+  * {
+    font-size: 12px;
+  }
 }
