--- a/src/pages/Bgm/Bgm.module.scss
+++ b/src/pages/Bgm/Bgm.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   background-color: $color-black;
   height: fit-content;
-  min-height: 881px;
+  min-height: 100svh;
   padding-bottom: 120px;
   gap: 20px;
 }
