--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-items: center;
   background-color: $color-black;
-  height: fit-content;
-  min-height: 881px;
+  min-height: 100svh;
+  height: 1000px;
   padding-bottom: 40px;
   gap: 20px;
 }
@@ -23,9 +23,9 @@
   flex-direction: column;
   align-items: center;
   background-color: $color-grey-background;
-  height: fit-content;
   min-height: 700px;
-  min-width: 1000px;
+  height: max-content;
+  width: 60svw;
   border-radius: 24px;
   padding: 20px 40px;
 }
@@ -98,5 +98,47 @@
   position: absolute;
   z-index: 10;
   top: 40px;
-  left: 160px;
+  left: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .imgCnt3 {
+    z-index: 0;
+    left: -60px;
+    top: 200px;
+  }
+
+  .imgCnt {
+    right: 0;
+    top: 200px;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .aboutApp {
+    p {
+      flex-direction: column;
+      text-align: center;
+      gap: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 728px) {
+  .title {
+    font-size: 32px;
+  }
+
+  .mainDescriptionCnt {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .title {
+    font-size: 24px;
+  }
+  .mainDescriptionCnt {
+    padding: 10px 20px;
+  }
 }
