added burger menu for mobile navbar

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -45,12 +45,15 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .headerCnt {
+    justify-content: space-between;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .headerCnt {
     padding: 0 20px;
-  }
-  .title {
-    font-size: 12px;
   }
 
   .iconTitleCnt {
