--- a/src/components/DntTable/TableSidebar/TableSidebar.module.scss
+++ b/src/components/DntTable/TableSidebar/TableSidebar.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   text-align: center;
   font-size: 24px;
-  width: 300px;
+  width: 350px;
   height: 550px;
   overflow-y: scroll;
   background: white;
@@ -68,4 +68,14 @@
 .hideAllLabel {
   font-size: 14px;
   color: $color-black;
+}
+
+.appendCmdLabel {
+  font-size: 14px;
+  color: $color-black;
+}
+
+.appendCmdCnt {
+  display: block;
+  gap: 20px;
 }
