feat: added search panel for dnt view page by CTRL + F

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -7,8 +7,11 @@ $color-error: #f31260;
 $color-grey-font: #ecedee;
 
 $color-grey-divider: #ffffff26;
+$color-grey-border: #d4d4d8;
 
 $color-is-active: #0070f3;
 $color-input-border: #e4e4e7;
 $color-input-placeholder: #71717a;
 $color-grey-background: #18181b;
+
+$color-orange-highlight: #ffa328;
